button align fix

--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -1558,7 +1558,11 @@ ul.qazana-icon-list-items.qazana-inline-items {
     line-height: 1;
     -webkit-transition: all 0.5s;
     -o-transition: all 0.5s;
-    transition: all 0.5s; }
+    transition: all 0.5s;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; }
   .qazana-button.qazana-size-xs .qazana-button-content-wrapper {
     padding: 10px 20px;
     font-size: 13px; }
@@ -1602,17 +1606,27 @@ ul.qazana-icon-list-items.qazana-inline-items {
   color: inherit;
   opacity: 1; }
 
-.qazana-icon-hover-reveal-yes .qazana-button {
-  -webkit-transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95);
-  -o-transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95);
-  transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95); }
-
-.qazana-icon-hover-reveal-yes .qazana-align-icon-right .qazana-button-content-wrapper {
+.qazana-align-icon-right .qazana-button-content-wrapper {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
   -webkit-flex-direction: row-reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse; }
+
+.qazana-button-content-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.qazana-icon-hover-reveal-yes .qazana-button {
+  -webkit-transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95);
+  -o-transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95);
+  transition: all 0.5s cubic-bezier(0.3, 0.95, 0.3, 0.95); }
 
 .qazana-icon-hover-reveal-yes .qazana-button-icon {
   overflow: hidden;
